// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBox 1.0 RadioBox - active and activeState 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  border: 1px solid #000000;
  box-shadow: 0 0 0  0.0625rem #000000;
  outline: 0;
}

.c4 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    font-size="16px"
    letter-spacing="0.5px"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="false"
        class="c2"
        id="1"
        name="radiobox"
        tabindex="0"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 RadioBox - disabled 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #d8dada;
  border-color: #d8dada;
  outline: 0;
}

.c4 {
  cursor: normal;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    disabled=""
    font-size="16px"
    letter-spacing="0.5px"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="true"
        class="c2"
        disabled=""
        id="1"
        name="radiobox"
        tabindex="-1"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        disabled=""
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 RadioBox - disabled and disabledState 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #d8dada;
  border-color: #d8dada;
  outline: 0;
}

.c4 {
  cursor: normal;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    disabled=""
    font-size="16px"
    letter-spacing="0.5px"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="false"
        class="c2"
        disabled=""
        id="1"
        name="radiobox"
        tabindex="-1"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        disabled=""
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 RadioBox - not out of stock 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  outline: 0;
}

.c4 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    font-size="16px"
    letter-spacing="0.5px"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="false"
        class="c2"
        id="1"
        name="radiobox"
        tabindex="0"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 RadioBox - selected 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  border: 1px solid #000000;
  box-shadow: 0 0 0  0.0625rem #000000;
  outline: 0;
}

.c4 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -5px;
  top: -5px;
  right: -5px;
  bottom: -5px;
  border-radius: 0.4375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    font-size="16px"
    letter-spacing="0.5px"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="true"
        class="c2"
        id="1"
        name="hi"
        tabindex="0"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 RadioBox - selected and disabledState 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  border: 1px solid #000000;
  box-shadow: 0 0 0  0.0625rem #000000;
  outline: 0;
}

.c4 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -5px;
  top: -5px;
  right: -5px;
  bottom: -5px;
  border-radius: 0.4375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    font-size="16px"
    letter-spacing="0.5px"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="true"
        class="c2"
        id="1"
        name="radiobox"
        tabindex="0"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 RadioBoxGroup - vertical orientation 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  border: 1px solid #000000;
  box-shadow: 0 0 0  0.0625rem #000000;
  outline: 0;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  outline: 0;
}

.c5 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c5:active,
.c5:hover {
  outline: 0;
}

.c4 {
  display: block;
  padding: 0.75rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c4 .LabelContent {
  display: block;
}

.c4 > *:not(:last-child) {
  margin-bottom: 0.125rem;
}

.c8 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  font-weight: 400;
  margin: 0;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c10 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c10:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c10:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c3 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c3:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -5px;
  top: -5px;
  right: -5px;
  bottom: -5px;
  border-radius: 0.4375rem;
  border: 1px dashed #000000;
}

.c3:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c7 {
  pointer-events: auto;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  height: auto;
  margin: 0 0 0.75rem;
}

<div>
  <div
    class="c0"
    orientation="vertical"
    role="radiogroup"
  >
    <div
      class="c1"
      font-size="16px"
      id="32GB"
      letter-spacing="0.5px"
      orientation="vertical"
    >
      <div
        class="c2"
      >
        <input
          aria-checked="true"
          class="c3"
          id="radioboxOne"
          tabindex="0"
          type="radio"
          value="on"
        />
        <label
          aria-hidden="false"
          aria-labelledby="label-radioboxOne"
          class="c4 c5"
          font-size="16px"
          font-weight="700"
          for="radioboxOne"
          letter-spacing="0.5px"
        >
          <span
            aria-hidden="true"
            class="c6"
            id="label-radioboxOne"
          >
            <span
              class="c7"
            >
              <span
                class="LabelContent c7"
              >
                32GB
              </span>
              <span
                class="SubLabel c8"
                font-size="16px"
                letter-spacing="0.5px"
              >
                subtext
              </span>
            </span>
            
          </span>
        </label>
      </div>
    </div>
    <div
      class="c9"
      font-size="16px"
      id="64GB"
      letter-spacing="0.5px"
      orientation="vertical"
    >
      <div
        class="c2"
      >
        <input
          aria-checked="false"
          class="c10"
          id="radioboxTwo"
          tabindex="0"
          type="radio"
          value="on"
        />
        <label
          aria-hidden="false"
          aria-labelledby="label-radioboxTwo"
          class="c4 c5"
          font-size="16px"
          font-weight="700"
          for="radioboxTwo"
          letter-spacing="0.5px"
        >
          <span
            aria-hidden="true"
            class="c6"
            id="label-radioboxTwo"
          >
            <span
              class="c7"
            >
              <span
                class="LabelContent c7"
              >
                64GB
              </span>
              <span
                class="SubLabel c8"
                font-size="16px"
                letter-spacing="0.5px"
              >
                subtext
              </span>
            </span>
            
          </span>
        </label>
      </div>
    </div>
    <div
      class="c9"
      font-size="16px"
      id="128GB"
      letter-spacing="0.5px"
      orientation="vertical"
    >
      <div
        class="c2"
      >
        <input
          aria-checked="false"
          class="c10"
          id="radioboxThree"
          tabindex="0"
          type="radio"
          value="on"
        />
        <label
          aria-hidden="false"
          aria-labelledby="label-radioboxThree"
          class="c4 c5"
          font-size="16px"
          font-weight="700"
          for="radioboxThree"
          letter-spacing="0.5px"
        >
          <span
            aria-hidden="true"
            class="c6"
            id="label-radioboxThree"
          >
            <span
              class="c7"
            >
              <span
                class="LabelContent c7"
              >
                128GB
              </span>
              <span
                class="SubLabel c8"
                font-size="16px"
                letter-spacing="0.5px"
              >
                subtext
              </span>
            </span>
            
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 Radiobox - hoverState 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  outline: 0;
}

.c0:hover {
  border: 1px solid #6f7171;
  box-shadow: 0 0 0  0.0625rem #6f7171;
}

.c4 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    font-size="16px"
    letter-spacing="0.5px"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="false"
        class="c2"
        id="1"
        name="test"
        tabindex="0"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox 1.0 Radiobox - selected and vertical orientation 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 18.75rem;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  border: 1px solid #000000;
  box-shadow: 0 0 0  0.0625rem #000000;
  outline: 0;
}

.c4 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -5px;
  top: -5px;
  right: -5px;
  bottom: -5px;
  border-radius: 0.4375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
    font-size="16px"
    letter-spacing="0.5px"
    orientation="vertical"
    width="300"
  >
    <div
      class="c1"
    >
      <input
        aria-checked="true"
        class="c2"
        id="1"
        name="test"
        tabindex="0"
        type="radio"
        value="on"
      />
      <label
        aria-hidden="false"
        aria-labelledby="label-1"
        class="c3 c4"
        font-size="16px"
        font-weight="400"
        for="1"
        letter-spacing="0.5px"
      >
        <span
          aria-hidden="true"
          class="c5"
          id="label-1"
        >
          <span
            class="c6"
          >
            
            
          </span>
          
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioBox and RadioBoxGroup RadioBox - outOfStock 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  outline: 0;
}

.c6 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c6:active,
.c6:hover {
  outline: 0;
}

.c5 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c5 .LabelContent {
  display: block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c4 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c4:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c4:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c8 {
  pointer-events: auto;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c1 {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 10;
  cursor: pointer;
  pointer-events: none;
}

.c2 {
  stroke: #6f7171;
}

.c9 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

<div
  class="c0"
  font-size="16px"
  letter-spacing="0.5px"
>
  <svg
    class="c1"
  >
    <line
      class="c2"
      x1="0"
      x2="100%"
      y1="100%"
      y2="0"
    />
  </svg>
  <div
    class="c3"
  >
    <input
      aria-checked="false"
      class="c4"
      id="radioBox"
      name="32gb"
      tabindex="0"
      type="radio"
      value="on"
    />
    <label
      aria-hidden="false"
      aria-labelledby="label-radioBox"
      class="c5 c6"
      font-size="16px"
      font-weight="400"
      for="radioBox"
      letter-spacing="0.5px"
    >
      <span
        aria-hidden="true"
        class="c7"
        id="label-radioBox"
      >
        <span
          class="c8"
        >
          
          
          <span
            class="c9"
          >
            Out of stock
          </span>
        </span>
        
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioBox and RadioBoxGroup RadioBox - selected and disabled 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #d8dada;
  border-color: #d8dada;
  outline: 0;
}

.c6 {
  cursor: normal;
  height: 100%;
  z-index: 1;
}

.c6:active,
.c6:hover {
  outline: 0;
}

.c5 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c5 .LabelContent {
  display: block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c4 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c4:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c4:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c8 {
  pointer-events: auto;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c1 {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 10;
  cursor: pointer;
  pointer-events: none;
}

.c2 {
  stroke: #d8dada;
}

.c9 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

<div
  class="c0"
  disabled=""
  font-size="16px"
  letter-spacing="0.5px"
>
  <svg
    class="c1"
  >
    <line
      class="c2"
      x1="0"
      x2="100%"
      y1="100%"
      y2="0"
    />
  </svg>
  <div
    class="c3"
  >
    <input
      aria-checked="false"
      class="c4"
      disabled=""
      id="radioBox"
      name="32gb"
      tabindex="-1"
      type="radio"
      value="on"
    />
    <label
      aria-hidden="false"
      aria-labelledby="label-radioBox"
      class="c5 c6"
      disabled=""
      font-size="16px"
      font-weight="400"
      for="radioBox"
      letter-spacing="0.5px"
    >
      <span
        aria-hidden="true"
        class="c7"
        id="label-radioBox"
      >
        <span
          class="c8"
        >
          
          
          <span
            class="c9"
          >
            Out of stock
          </span>
        </span>
        
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioBox and RadioBoxGroup RadioBox 1`] = `
.c0 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c0:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c0:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

<input
  aria-checked="false"
  class="c0"
  id="radioBox"
  name="32gb"
  tabindex="0"
  type="radio"
  value="on"
/>
`;

exports[`RadioBox and RadioBoxGroup RadioBox with children 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid #6f7171;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
  height: 100%;
  min-height: 2.75rem;
  position: relative;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  background-color: #ffffff;
  color: #000000;
  outline: 0;
}

.c4 {
  cursor: pointer;
  height: 100%;
  z-index: 1;
}

.c4:active,
.c4:hover {
  outline: 0;
}

.c3 {
  display: block;
  padding: 0.75rem;
  font-weight: 400;
  font-size: 1rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS;
}

.c3 .LabelContent {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 100%;
  z-index: 1;
}

.c2 {
  visibility: visible !important;
  opacity: 0 !important;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  height: 100%;
  width: 100%;
  margin: 0;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label:after {
  content: '';
  position: absolute;
  left: -4px;
  top: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 0.375rem;
  border: 1px dashed #000000;
}

.c2:focus:not(:hover):not(:focus-visible) + label:after {
  display: none;
}

.c6 {
  pointer-events: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div
  class="c0"
  font-size="16px"
  letter-spacing="0.5px"
>
  <div
    class="c1"
  >
    <input
      aria-checked="false"
      class="c2"
      id="1"
      name="32gb"
      tabindex="0"
      type="radio"
      value="on"
    />
    <label
      aria-hidden="false"
      aria-labelledby="label-1"
      class="c3 c4"
      font-size="16px"
      font-weight="400"
      for="1"
      letter-spacing="0.5px"
    >
      <span
        aria-hidden="true"
        class="c5"
        id="label-1"
      >
        <span
          class="c6"
        >
          
          
          <div>
            32 GB
          </div>
        </span>
        
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioBox and RadioBoxGroup RadioBoxGroup 1`] = `undefined`;
